--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,20 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
+}
+
+#root {
+	width: 100vw;
+	height: 100vh;
+	background-image: url("./assets/pockeball-bg.png");
+	background-repeat: repeat;
+	background-size: 492px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
